# cofield

./: Cargo.toml  README.md
.github/workflows/: desktop-publish.yml
app/: package-lock.json  package.json
app/src/: App.css  App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src-tauri/src/commands/: mod.rs
app/src/components/: AggregationSizeInput.tsx  AppToolbar.tsx  BleConnectionButton.tsx  EditFolderPath.tsx  EnableKeyboardSimulationButton.tsx  FingersValueChart.tsx  Hand.tsx  RecordButton.tsx  TextRetribution.tsx
app/src/providers/: GloveData.tsx  ProcessConfig.tsx  TextWriter.tsx
arduino/: glove.ino  input_glove.ino  output_glove.ino
src/: aggregator.rs  devices.rs  lib.rs  lsl_setup.rs  main.rs  opt.rs  output.rs  parser.rs  patterns.rs  process.rs
src/devices/: flex_sensor_glove.rs  mod.rs  vibration_glove.rs
src/patterns/: mod.rs  text.rs
