[package]
name = "cofield-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11.5"
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
pretty_env_logger = "0.5.0"
uuid = "1.10.0"
anyhow = "1.0.89"
futures = "0.3.31"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
dotenv = "0.15.0"
console = "0.15.8"
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.133"
lsl = { git = "https://github.com/labstreaminglayer/liblsl-rust", version = "0.1.1", optional = true }
rand = "0.8.5"

[features]
lsl = ["dep:lsl"]

[workspace]
resolver = "2"
members = [".", "app/src-tauri"]
