[package]
name = "cofield"
version = "0.1.0"
description = "App for the Cofield project"
authors = ["oirytheo@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cofield-receiver = { path = "../../" }
anyhow = "1.0.97"
tokio = "1.44.1"
futures = "0.3.31"
csv = "1.4.0"
chrono = "0.4.42"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
